# dotai

./: CLAUDE.md  README.md  install.ps1  install.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
.claude/: settings.json
standards/agents/: api-designer.md  architect.md  code-reviewer.md  compliance-reviewer.md  data-engineer.md  devops.md  doc-writer.md  incident-responder.md  migration-planner.md  performance-analyst.md  security-auditor.md  test-engineer.md
standards/home/: CLAUDE.md  settings.json  statusline.sh
standards/home/rules/: coding.md  safety.md  security.md  workflow.md
standards/tasks/: lessons.md  todo.md
